tests/snapshots/regression/semantic_types__patterns__non_exhaustive_bool_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 1 error • tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
error[E015]: Non-Exhaustive Match

Match is non-exhaustive: missing Bool case(s): true.

  tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx:3:5
  |
3 |     match flag {
  |     ^^^^^^^^^^^^
4 |         false -> 0,
  | ^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Hint:
  Add missing boolean arms or an unguarded `_ -> ...` catch-all.
